--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
     }
   ],
   "require": {
-    "php": "^8.1",
-    "illuminate/support": "^10.0|^11.0",
+    "php": "^8.2",
+    "illuminate/support": "^10.0|^11.0|^12.0",
     "spatie/laravel-permission": "^6.10"
   },
   "require-dev": {
